--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,43 +1,60 @@
+@import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.presPics{
-  height: 50px;
-}
-
 body{
-  background-image: url("background.jpg");
+  background-image: url("background.png");
   background-repeat: no-repeat;
   background-size: cover;
-}  
+}
+
+.bestScore{
+  position: relative;
+  font-family: 'Tangerine', cursive;
+  font-size: 45px;
+  float:right;
+  margin-right:65px;
+  margin-top:-300px;
+  margin-bottom: 200px;
+}
+
+.currScore{
+  position: relative;
+  margin-top:-300px;
+  font-family: 'Tangerine', cursive;
+  font-size: 45px;
+  margin-bottom: 200px;
+  margin-left:65px;
+}
+
+.instructions{
+  position: relative;
+  font-family: 'Tangerine', cursive;
+  font-size: 45px;
+  text-align: center;
+  margin-top:75px;
+  margin-bottom: 100px;
+}
+
+.title{
+
+    font-size: 60px;
+    font-family: 'Tangerine', cursive;
+    text-align: center;
+}
+
+img{
+  height:100px;
+  width:75px;
+  border-radius: 5px;
+  margin:5px;
+}
+
+.gallery{
+  max-width: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 33.3%;
+}
